force-app/main/default/objects/Marketing_Asset__c/Marketing_Asset__c.object-meta.xml
<CustomObject>
    <label>Marketing Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>