force-app/main/default/objects/Marketing_Asset__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <label>Asset ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>