force-app/main/default/objects/Marketing_Asset__c/fields/Asset_Image__c.field-meta.xml
<CustomField>
    <fullName>Asset_Image__c</fullName>
    <formula>IMAGE(&quot;http://apollo.valueretail.com/splash/servlets/download?attachment=false&amp;path=%2Fhome%2Fsplash%2FSource%2FWEB-INF%2FFiles%2FMediaFileRoot%2F1893%2F0000%2F&quot; &amp;  text(Asset_ID__c) &amp; &quot;%2F3948&amp;name=selectedPreview&amp;contenttype=image/jpeg&quot;, &quot;Image&quot; )</formula>
    <label>Asset Image</label>
    <type>Text</type>
</CustomField>