force-app/main/default/objects/Marketing_Asset__c/fields/Asset_Link__c.field-meta.xml
<CustomField>
    <fullName>Asset_Link__c</fullName>
    <formula>HYPERLINK(&quot;http://apollo.valueretail.com/splash/common/mediaLibrary/main/Fram.jsp?ReloadPrefix=parent.Cont&amp;ModuleID=1893&amp;ID=&quot; &amp;  TEXT(Asset_ID__c), &quot;Order in Apollo&quot;, &quot;_new&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Link</label>
    <type>Text</type>
</CustomField>