force-app/main/default/objects/Marketing_Asset__c/fields/Web_Site_Copy__c.field-meta.xml
<CustomField>
    <fullName>Web_Site_Copy__c</fullName>
    <label>Web Site Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>