force-app/main/default/objects/Marketing_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Image_Small__c</columns>
    <columns>Asset_Link__c</columns>
    <columns>Marketing_Activity__c</columns>
    <columns>Price__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>