force-app/main/default/objects/Marketing_Asset__c/listViews/Coach_Products.listView-meta.xml
<ListView>
    <fullName>Coach_Products</fullName>
    <columns>NAME</columns>
    <columns>Asset_Image_Small__c</columns>
    <columns>Asset_Link__c</columns>
    <columns>Marketing_Activity__c</columns>
    <columns>Price__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketing_Activity__c</field>
        <operation>contains</operation>
        <value>coach</value>
    </filters>
    <label>Coach Products</label>
</ListView>